<resources>
    <string name="app_name">Compound</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_application_logo">Application logo</string>
    <string name="tv_name_of_game">Состав числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="btn_ok">Понятно</string>
    <string name="tv_pick_level">Выберите уровень:</string>
    <string name="button_level_test">Тестовый</string>
    <string name="button_level_easy">Лёгкий</string>
    <string name="button_level_medium">Средний</string>
    <string name="button_level_hard">Тяжёлый</string>
    <string name="question_mark">\?</string>
    <string name="tv_results">Правильных ответ %s (минимум %s)</string>
    <string name="game_over">Game Over</string>
    <string name="tv_score_answers">Ваш счет: %s</string>
    <string name="tv_score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="tv_required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="tv_required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
</resources>